[package]
name = "mpls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.18", features = ["dates"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
turambar = { path = "../turambar" }
svg = "0.10"
csv = "1.1"